# rgb

./: Cargo.toml  README.md  cliff.toml  icons.toml
res/: style.css  style.css.map  style.scss
src/: app_module.rs  main.rs
src/ext/: by_id.rs  for_name.rs  keyboard_layout_ext.rs  layer_shell_ext.rs  mod.rs  monitor_ext.rs  on_self.rs  parent_for.rs
src/macros/: mod.rs  stateless_value_action.rs
src/widgets/: datetime.rs  focused.rs  language.rs  mod.rs  power_menu.rs  systray.rs  tray_item.rs  workspace.rs  workspaces.rs
src/workers/: hyprland_worker.rs  mod.rs
