[package]
name = "regbar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
relm4 = { version = "~0.9.0", features = ["default"] }
relm4-components = "~0.9.1"
relm4-icons = "~0.9.0"
gtk4-layer-shell = "~0.4.0"
#hyprland = { version = "0.4.0-alpha.3" }
hyprland = { git = "https://github.com/deltadelete/hyprland-rs", branch = "fix/activewindow" }
system-tray = "~0.2.0"
notify = { version = "~6.1.1" }
log = { version = "~0.4" }
env_logger = "~0.11"
gtk = { version = "~0.9", package = "gtk4" }
serde = { version = "~1.0", features = ["derive"] }
chrono ={ version = "~0.4"}

[dependencies.tokio]
version = "~1.40"
features = ["time", "macros", "rt", "fs", "rt-multi-thread"]