[package]
name = "regbar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
### UI
relm4 = { version = "~0.9.0", features = ["default"] }
relm4-components = "~0.9.1"
relm4-icons = "~0.9.0"
gtk = { version = "~0.9", package = "gtk4" }
system-tray = "~0.2.0"
###
### Wayland
gtk4-layer-shell = "~0.4.0"
#hyprland = { version = "0.4.0-alpha.3" }
hyprland = { git = "https://github.com/deltadelete/hyprland-rs", branch = "fix/activewindow" }
smithay-client-toolkit = "0.19.2"
###
### Logging
log = { version = "~0.4" }
env_logger = "~0.11"
###
### Language
xkb-data = "0.2.1"
language-tags = "0.3.2"
###
### Serialization
serde = { version = "~1.0", features = ["derive"] }
serde_json = "~1.0"
###
chrono ={ version = "~0.4"} # Time
notify = { version = "~6.1.1" } # File watcher

[dependencies.tokio]
version = "~1.40"
features = ["time", "macros", "rt", "fs", "rt-multi-thread"]